--- a/LastPlane.ipynb
+++ b/LastPlane.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,568 @@
     "import matplotlib.pyplot as plt\n",
     "from shapely.geometry import Point\n",
     "%matplotlib inline\n",
-    "import geopandas"
+    "import geopandas\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Departures by Airport\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Goroka Airport</td>\n",
+       "      <td>Goroka</td>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>GKA</td>\n",
+       "      <td>AYGA</td>\n",
+       "      <td>-6.081690</td>\n",
+       "      <td>145.391998</td>\n",
+       "      <td>5282</td>\n",
+       "      <td>10</td>\n",
+       "      <td>U</td>\n",
+       "      <td>Pacific/Port_Moresby</td>\n",
+       "      <td>airport</td>\n",
+       "      <td>OurAirports</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Madang Airport</td>\n",
+       "      <td>Madang</td>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>MAG</td>\n",
+       "      <td>AYMD</td>\n",
+       "      <td>-5.207080</td>\n",
+       "      <td>145.789001</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>U</td>\n",
+       "      <td>Pacific/Port_Moresby</td>\n",
+       "      <td>airport</td>\n",
+       "      <td>OurAirports</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Mount Hagen Kagamuga Airport</td>\n",
+       "      <td>Mount Hagen</td>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>HGU</td>\n",
+       "      <td>AYMH</td>\n",
+       "      <td>-5.826790</td>\n",
+       "      <td>144.296005</td>\n",
+       "      <td>5388</td>\n",
+       "      <td>10</td>\n",
+       "      <td>U</td>\n",
+       "      <td>Pacific/Port_Moresby</td>\n",
+       "      <td>airport</td>\n",
+       "      <td>OurAirports</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Nadzab Airport</td>\n",
+       "      <td>Nadzab</td>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>LAE</td>\n",
+       "      <td>AYNZ</td>\n",
+       "      <td>-6.569803</td>\n",
+       "      <td>146.725977</td>\n",
+       "      <td>239</td>\n",
+       "      <td>10</td>\n",
+       "      <td>U</td>\n",
+       "      <td>Pacific/Port_Moresby</td>\n",
+       "      <td>airport</td>\n",
+       "      <td>OurAirports</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Port Moresby Jacksons International Airport</td>\n",
+       "      <td>Port Moresby</td>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>POM</td>\n",
+       "      <td>AYPY</td>\n",
+       "      <td>-9.443380</td>\n",
+       "      <td>147.220001</td>\n",
+       "      <td>146</td>\n",
+       "      <td>10</td>\n",
+       "      <td>U</td>\n",
+       "      <td>Pacific/Port_Moresby</td>\n",
+       "      <td>airport</td>\n",
+       "      <td>OurAirports</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0                                            1             2   \\\n",
+       "0   1                               Goroka Airport        Goroka   \n",
+       "1   2                               Madang Airport        Madang   \n",
+       "2   3                 Mount Hagen Kagamuga Airport   Mount Hagen   \n",
+       "3   4                               Nadzab Airport        Nadzab   \n",
+       "4   5  Port Moresby Jacksons International Airport  Port Moresby   \n",
+       "\n",
+       "                 3    4     5         6           7     8   9  10  \\\n",
+       "0  Papua New Guinea  GKA  AYGA -6.081690  145.391998  5282  10  U   \n",
+       "1  Papua New Guinea  MAG  AYMD -5.207080  145.789001    20  10  U   \n",
+       "2  Papua New Guinea  HGU  AYMH -5.826790  144.296005  5388  10  U   \n",
+       "3  Papua New Guinea  LAE  AYNZ -6.569803  146.725977   239  10  U   \n",
+       "4  Papua New Guinea  POM  AYPY -9.443380  147.220001   146  10  U   \n",
+       "\n",
+       "                     11       12           13  \n",
+       "0  Pacific/Port_Moresby  airport  OurAirports  \n",
+       "1  Pacific/Port_Moresby  airport  OurAirports  \n",
+       "2  Pacific/Port_Moresby  airport  OurAirports  \n",
+       "3  Pacific/Port_Moresby  airport  OurAirports  \n",
+       "4  Pacific/Port_Moresby  airport  OurAirports  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"airports.dat\", header= None)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>IATA</th>\n",
+       "      <th>ICAO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Goroka Airport</td>\n",
+       "      <td>Goroka</td>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>GKA</td>\n",
+       "      <td>AYGA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Madang Airport</td>\n",
+       "      <td>Madang</td>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>MAG</td>\n",
+       "      <td>AYMD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mount Hagen Kagamuga Airport</td>\n",
+       "      <td>Mount Hagen</td>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>HGU</td>\n",
+       "      <td>AYMH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Nadzab Airport</td>\n",
+       "      <td>Nadzab</td>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>LAE</td>\n",
+       "      <td>AYNZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Port Moresby Jacksons International Airport</td>\n",
+       "      <td>Port Moresby</td>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>POM</td>\n",
+       "      <td>AYPY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          Name          City  \\\n",
+       "0                               Goroka Airport        Goroka   \n",
+       "1                               Madang Airport        Madang   \n",
+       "2                 Mount Hagen Kagamuga Airport   Mount Hagen   \n",
+       "3                               Nadzab Airport        Nadzab   \n",
+       "4  Port Moresby Jacksons International Airport  Port Moresby   \n",
+       "\n",
+       "            Country IATA  ICAO  \n",
+       "0  Papua New Guinea  GKA  AYGA  \n",
+       "1  Papua New Guinea  MAG  AYMD  \n",
+       "2  Papua New Guinea  HGU  AYMH  \n",
+       "3  Papua New Guinea  LAE  AYNZ  \n",
+       "4  Papua New Guinea  POM  AYPY  "
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "airport = df.loc[:,1:5]\n",
+    "airport.columns=['Name','City','Country','IATA','ICAO']\n",
+    "airport.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>IATA</th>\n",
+       "      <th>ICAO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1344</th>\n",
+       "      <td>Paris-Le Bourget Airport</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>France</td>\n",
+       "      <td>LBG</td>\n",
+       "      <td>LFPB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1346</th>\n",
+       "      <td>Charles de Gaulle International Airport</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>France</td>\n",
+       "      <td>CDG</td>\n",
+       "      <td>LFPG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1350</th>\n",
+       "      <td>Paris-Orly Airport</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>France</td>\n",
+       "      <td>ORY</td>\n",
+       "      <td>LFPO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6794</th>\n",
+       "      <td>Cox Field</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>PRX</td>\n",
+       "      <td>KPRX</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         Name   City        Country IATA  ICAO\n",
+       "1344                 Paris-Le Bourget Airport  Paris         France  LBG  LFPB\n",
+       "1346  Charles de Gaulle International Airport  Paris         France  CDG  LFPG\n",
+       "1350                       Paris-Orly Airport  Paris         France  ORY  LFPO\n",
+       "6794                                Cox Field  Paris  United States  PRX  KPRX"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "airport.loc[airport['City'] == 'Paris']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Maintenant que nous avons le code de l'aéroport pour Charles de Gaulle LFPG, procurons nous l'instant t maintenant et t- 1 heures en tant absolu Unix Time Stamp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1553029324.7749906\n",
+      "Tue Mar 19 22:02:04 2019\n",
+      "1553011324.7749906\n",
+      "Tuesday 19 March 2019 22:02:04\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "from datetime import datetime\n",
+    "tnow = time.time()-3600*24  # t now à j-1\n",
+    "print(tnow)\n",
+    "print(time.ctime(tnow))\n",
+    "t0 = tnow-3600*5\n",
+    "print(t0)\n",
+    "a =time.ctime(t0)\n",
+    "print(datetime.fromtimestamp(tnow).strftime(\"%A %d %B %Y %H:%M:%S\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url=\"https://opensky-network.org/api/flights/arrival?airport=LFPG&begin=\"+str(t0)+\"&end=\"+str(tnow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['arrivalAirportCandidatesCount', 'callsign', 'departureAirportCandidatesCount', 'estArrivalAirport', 'estArrivalAirportHorizDistance', 'estArrivalAirportVertDistance', 'estDepartureAirport', 'estDepartureAirportHorizDistance', 'estDepartureAirportVertDistance', 'firstSeen', 'icao24', 'lastSeen']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = requests.get(url).json()\n",
+    "dataframe1 = pd.DataFrame.from_dict(data, orient='columns')\n",
+    "dataframe1.head()\n",
+    "print( list(dataframe1.columns.values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_arrivals = dataframe1.loc[:,['callsign',\"estArrivalAirport\",\"estDepartureAirport\",\"firstSeen\",\"lastSeen\"]]\n",
+    "df_arrivals= df_arrivals.rename(columns ={'estArrivalAirport':'ArrivalAirport','estDepartureAirport':'DepartureAirport'})\n",
+    "df_arrivals['FlighTime'] = \"11\"\n",
+    "df_arrivals['firstSeen'] = df_arrivals['firstSeen'].apply(lambda x: datetime.fromtimestamp(x).strftime(\"%H:%M - %d %B %Y \"))\n",
+    "df_arrivals['lastSeen'] = df_arrivals['lastSeen'].apply(lambda x: datetime.fromtimestamp(x).strftime(\"%H:%M %d %B %Y \"))\n",
+    "s = airport.set_index('ICAO')['Name']\n",
+    "df_arrivals[\"DepartureAirport\"] = df_arrivals[\"DepartureAirport\"].replace(s)\n",
+    "df_arrivals[\"ArrivalAirport\"] = df_arrivals[\"ArrivalAirport\"].replace(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>callsign</th>\n",
+       "      <th>ArrivalAirport</th>\n",
+       "      <th>DepartureAirport</th>\n",
+       "      <th>firstSeen</th>\n",
+       "      <th>lastSeen</th>\n",
+       "      <th>FlighTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SWR646</td>\n",
+       "      <td>Charles de Gaulle International Airport</td>\n",
+       "      <td>Zürich Airport</td>\n",
+       "      <td>20:45 - 19 March 2019</td>\n",
+       "      <td>21:40 19 March 2019</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AFR1313</td>\n",
+       "      <td>Charles de Gaulle International Airport</td>\n",
+       "      <td>Milano Linate Airport</td>\n",
+       "      <td>20:29 - 19 March 2019</td>\n",
+       "      <td>21:38 19 March 2019</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AFR767M</td>\n",
+       "      <td>Charles de Gaulle International Airport</td>\n",
+       "      <td>Marseille Provence Airport</td>\n",
+       "      <td>20:30 - 19 March 2019</td>\n",
+       "      <td>21:36 19 March 2019</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AFR26CY</td>\n",
+       "      <td>Charles de Gaulle International Airport</td>\n",
+       "      <td>Toulouse-Blagnac Airport</td>\n",
+       "      <td>20:24 - 19 March 2019</td>\n",
+       "      <td>21:35 19 March 2019</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AFR1839</td>\n",
+       "      <td>Charles de Gaulle International Airport</td>\n",
+       "      <td>Hannover Airport</td>\n",
+       "      <td>20:34 - 19 March 2019</td>\n",
+       "      <td>21:33 19 March 2019</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   callsign                           ArrivalAirport  \\\n",
+       "0  SWR646    Charles de Gaulle International Airport   \n",
+       "1  AFR1313   Charles de Gaulle International Airport   \n",
+       "2  AFR767M   Charles de Gaulle International Airport   \n",
+       "3  AFR26CY   Charles de Gaulle International Airport   \n",
+       "4  AFR1839   Charles de Gaulle International Airport   \n",
+       "\n",
+       "             DepartureAirport               firstSeen              lastSeen  \\\n",
+       "0              Zürich Airport  20:45 - 19 March 2019   21:40 19 March 2019    \n",
+       "1       Milano Linate Airport  20:29 - 19 March 2019   21:38 19 March 2019    \n",
+       "2  Marseille Provence Airport  20:30 - 19 March 2019   21:36 19 March 2019    \n",
+       "3    Toulouse-Blagnac Airport  20:24 - 19 March 2019   21:35 19 March 2019    \n",
+       "4            Hannover Airport  20:34 - 19 March 2019   21:33 19 March 2019    \n",
+       "\n",
+       "  FlighTime  \n",
+       "0        11  \n",
+       "1        11  \n",
+       "2        11  \n",
+       "3        11  \n",
+       "4        11  "
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_arrivals.head()"
    ]
   },
   {
@@ -25,6 +586,13 @@
     "#bboxFrance= [min_latitude, max_latitude, min_longitude, max_latitude]\n",
     "bboxFrance= [41, 52, -5.5, 10]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
