modifié :         LastPlane.ipynb

--- a/LastPlane.ipynb
+++ b/LastPlane.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "4  Pacific/Port_Moresby  airport  OurAirports  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -218,8 +218,8 @@
        "      <th>Name</th>\n",
        "      <th>City</th>\n",
        "      <th>Country</th>\n",
-       "      <th>IATA</th>\n",
        "      <th>ICAO</th>\n",
+       "      <th>IATA</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -275,7 +275,7 @@
        "3                               Nadzab Airport        Nadzab   \n",
        "4  Port Moresby Jacksons International Airport  Port Moresby   \n",
        "\n",
-       "            Country IATA  ICAO  \n",
+       "            Country ICAO  IATA  \n",
        "0  Papua New Guinea  GKA  AYGA  \n",
        "1  Papua New Guinea  MAG  AYMD  \n",
        "2  Papua New Guinea  HGU  AYMH  \n",
@@ -283,20 +283,20 @@
        "4  Papua New Guinea  POM  AYPY  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "airport = df.loc[:,1:5]\n",
-    "airport.columns=['Name','City','Country','IATA','ICAO']\n",
+    "airport.columns=['Name','City','Country','ICAO','IATA']\n",
     "airport.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -323,8 +323,8 @@
        "      <th>Name</th>\n",
        "      <th>City</th>\n",
        "      <th>Country</th>\n",
-       "      <th>IATA</th>\n",
        "      <th>ICAO</th>\n",
+       "      <th>IATA</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -365,14 +365,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                                         Name   City        Country IATA  ICAO\n",
+       "                                         Name   City        Country ICAO  IATA\n",
        "1344                 Paris-Le Bourget Airport  Paris         France  LBG  LFPB\n",
        "1346  Charles de Gaulle International Airport  Paris         France  CDG  LFPG\n",
        "1350                       Paris-Orly Airport  Paris         France  ORY  LFPO\n",
        "6794                                Cox Field  Paris  United States  PRX  KPRX"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,28 +397,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1553029324.7749906\n",
-      "Tue Mar 19 22:02:04 2019\n",
-      "1553011324.7749906\n",
-      "Tuesday 19 March 2019 22:02:04\n"
+      "1553118616\n",
+      "Wed Mar 20 22:50:16 2019\n",
+      "1553100616\n",
+      "Wednesday 20 March 2019 17:50:16\n"
      ]
     }
    ],
    "source": [
     "import time\n",
     "from datetime import datetime\n",
-    "tnow = time.time()-3600*24  # t now à j-1\n",
+    "tnow = int(time.time())-3600*24  # t now à j-1\n",
     "print(tnow)\n",
     "print(time.ctime(tnow))\n",
     "t0 = tnow-3600*5\n",
     "print(t0)\n",
-    "a =time.ctime(t0)\n",
-    "print(datetime.fromtimestamp(tnow).strftime(\"%A %d %B %Y %H:%M:%S\"))"
+    "print(datetime.fromtimestamp(t0).strftime(\"%A %d %B %Y %H:%M:%S\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -447,23 +446,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'ICAO'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2655\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2656\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2657\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'ICAO'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-92-b59f3125ef41>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#df_arrivals['firstSeen'] = df_arrivals['firstSeen'].apply(lambda x: datetime.fromtimestamp(x).strftime(\"%H:%M - %d %B %Y \"))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#df_arrivals['lastSeen'] = df_arrivals['lastSeen'].apply(lambda x: datetime.fromtimestamp(x).strftime(\"%H:%M %d %B %Y \"))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0msap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mairport\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ICAO'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mdf_arrivals\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"DepartureAirport\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_arrivals\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"DepartureAirport\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"sap\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mset_index\u001b[0;34m(self, keys, drop, append, inplace, verify_integrity)\u001b[0m\n\u001b[1;32m   4176\u001b[0m                 \u001b[0mnames\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4177\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4178\u001b[0;31m                 \u001b[0mlevel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mframe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4179\u001b[0m                 \u001b[0mnames\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4180\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mdrop\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2925\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2926\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2927\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2928\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2929\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2656\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2657\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2658\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_maybe_cast_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2659\u001b[0m         \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtolerance\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtolerance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2660\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'ICAO'"
+     ]
+    }
+   ],
    "source": [
     "df_arrivals = dataframe1.loc[:,['callsign',\"estArrivalAirport\",\"estDepartureAirport\",\"firstSeen\",\"lastSeen\"]]\n",
     "df_arrivals= df_arrivals.rename(columns ={'estArrivalAirport':'ArrivalAirport','estDepartureAirport':'DepartureAirport'})\n",
-    "df_arrivals['FlighTime'] = \"11\"\n",
-    "df_arrivals['firstSeen'] = df_arrivals['firstSeen'].apply(lambda x: datetime.fromtimestamp(x).strftime(\"%H:%M - %d %B %Y \"))\n",
-    "df_arrivals['lastSeen'] = df_arrivals['lastSeen'].apply(lambda x: datetime.fromtimestamp(x).strftime(\"%H:%M %d %B %Y \"))\n",
-    "s = airport.set_index('ICAO')['Name']\n",
-    "df_arrivals[\"DepartureAirport\"] = df_arrivals[\"DepartureAirport\"].replace(s)\n",
-    "df_arrivals[\"ArrivalAirport\"] = df_arrivals[\"ArrivalAirport\"].replace(s)"
+    "#df_arrivals['FlighTime'] = df_arrivals['lastSeen']- df_arrivals['firstSeen']\n",
+    "#df_arrivals['FlighTimeH'] = df_arrivals['FlighTime'].apply(lambda x: (x/3600)%60)\n",
+    "#df_arrivals['firstSeen'] = df_arrivals['firstSeen'].apply(lambda x: datetime.fromtimestamp(x).strftime(\"%H:%M - %d %B %Y \"))\n",
+    "#df_arrivals['lastSeen'] = df_arrivals['lastSeen'].apply(lambda x: datetime.fromtimestamp(x).strftime(\"%H:%M %d %B %Y \"))\n",
+    "sap = airport.set_index('ICAO')['Name']\n",
+    "print(sap)\n",
+    "df_arrivals[\"DepartureAirport\"] = df_arrivals[\"DepartureAirport\"].replace(\"sap\")\n",
+    "df_arrivals[\"ArrivalAirport\"] = df_arrivals[\"ArrivalAirport\"].replace(sap)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -492,83 +520,63 @@
        "      <th>DepartureAirport</th>\n",
        "      <th>firstSeen</th>\n",
        "      <th>lastSeen</th>\n",
-       "      <th>FlighTime</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>SWR646</td>\n",
-       "      <td>Charles de Gaulle International Airport</td>\n",
-       "      <td>Zürich Airport</td>\n",
-       "      <td>20:45 - 19 March 2019</td>\n",
-       "      <td>21:40 19 March 2019</td>\n",
-       "      <td>11</td>\n",
+       "      <td>AFR43DR</td>\n",
+       "      <td>LFPG</td>\n",
+       "      <td>LEMD</td>\n",
+       "      <td>1553112016</td>\n",
+       "      <td>1553117899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>AFR1313</td>\n",
-       "      <td>Charles de Gaulle International Airport</td>\n",
-       "      <td>Milano Linate Airport</td>\n",
-       "      <td>20:29 - 19 March 2019</td>\n",
-       "      <td>21:38 19 March 2019</td>\n",
-       "      <td>11</td>\n",
+       "      <td>BAW326</td>\n",
+       "      <td>LFPG</td>\n",
+       "      <td>EGLL</td>\n",
+       "      <td>1553115420</td>\n",
+       "      <td>1553117754</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>AFR767M</td>\n",
-       "      <td>Charles de Gaulle International Airport</td>\n",
-       "      <td>Marseille Provence Airport</td>\n",
-       "      <td>20:30 - 19 March 2019</td>\n",
-       "      <td>21:36 19 March 2019</td>\n",
-       "      <td>11</td>\n",
+       "      <td>AFR123X</td>\n",
+       "      <td>LFPG</td>\n",
+       "      <td>LOWW</td>\n",
+       "      <td>1553111971</td>\n",
+       "      <td>1553117411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>AFR26CY</td>\n",
-       "      <td>Charles de Gaulle International Airport</td>\n",
-       "      <td>Toulouse-Blagnac Airport</td>\n",
-       "      <td>20:24 - 19 March 2019</td>\n",
-       "      <td>21:35 19 March 2019</td>\n",
-       "      <td>11</td>\n",
+       "      <td>BCS1845</td>\n",
+       "      <td>LFPG</td>\n",
+       "      <td>LFBD</td>\n",
+       "      <td>1553113593</td>\n",
+       "      <td>1553117135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>AFR1839</td>\n",
-       "      <td>Charles de Gaulle International Airport</td>\n",
-       "      <td>Hannover Airport</td>\n",
-       "      <td>20:34 - 19 March 2019</td>\n",
-       "      <td>21:33 19 March 2019</td>\n",
-       "      <td>11</td>\n",
+       "      <td>SRR6315</td>\n",
+       "      <td>LFPG</td>\n",
+       "      <td>LFRN</td>\n",
+       "      <td>1553114640</td>\n",
+       "      <td>1553117009</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   callsign                           ArrivalAirport  \\\n",
-       "0  SWR646    Charles de Gaulle International Airport   \n",
-       "1  AFR1313   Charles de Gaulle International Airport   \n",
-       "2  AFR767M   Charles de Gaulle International Airport   \n",
-       "3  AFR26CY   Charles de Gaulle International Airport   \n",
-       "4  AFR1839   Charles de Gaulle International Airport   \n",
-       "\n",
-       "             DepartureAirport               firstSeen              lastSeen  \\\n",
-       "0              Zürich Airport  20:45 - 19 March 2019   21:40 19 March 2019    \n",
-       "1       Milano Linate Airport  20:29 - 19 March 2019   21:38 19 March 2019    \n",
-       "2  Marseille Provence Airport  20:30 - 19 March 2019   21:36 19 March 2019    \n",
-       "3    Toulouse-Blagnac Airport  20:24 - 19 March 2019   21:35 19 March 2019    \n",
-       "4            Hannover Airport  20:34 - 19 March 2019   21:33 19 March 2019    \n",
-       "\n",
-       "  FlighTime  \n",
-       "0        11  \n",
-       "1        11  \n",
-       "2        11  \n",
-       "3        11  \n",
-       "4        11  "
+       "   callsign ArrivalAirport DepartureAirport   firstSeen    lastSeen\n",
+       "0  AFR43DR            LFPG             LEMD  1553112016  1553117899\n",
+       "1  BAW326             LFPG             EGLL  1553115420  1553117754\n",
+       "2  AFR123X            LFPG             LOWW  1553111971  1553117411\n",
+       "3  BCS1845            LFPG             LFBD  1553113593  1553117135\n",
+       "4  SRR6315            LFPG             LFRN  1553114640  1553117009"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
