modifié :         FranceFlyModelCompanyGraph.ipynb 	supprimé :        LastPlane.ipynb 	modifié :         airport_number_routes.ipynb 	nouveau fichier : routes_networkx.ipynb

--- a/airport_number_routes.ipynb
+++ b/airport_number_routes.ipynb
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1577,7 +1577,9 @@
     "\n",
     "for index, row in traffic_final.iterrows():\n",
     "     color = norm(row.sumtraffic*2)\n",
-    "     ax.scatter(row.long, row.lat, s=row.sumtraffic, c=[cmap(color)], alpha=0.8, edgecolors=\"grey\", linewidth=2)\n"
+    "     ax.scatter(row.long, row.lat, s=row.sumtraffic,c=[cmap(color)], alpha=0.8, edgecolors=\"grey\", label=color, linewidth=2)\n",
+    "\n",
+    "#ax.legend()"
    ]
   },
   {
