supprimé :        FranceFlyModelCompanyGraph.ipynb 	modifié :         README.md 	modifié :         RealTimeFlightTrackingBokeh.ipynb 	nouveau fichier : RealTimeFlightTrackingPlotAirlinesAircraftModel.ipynb 	renommé :         screen.png -> images/screen.png

--- a/RealTimeFlightTrackingBokeh.ipynb
+++ b/RealTimeFlightTrackingBokeh.ipynb
@@ -697,7 +697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](screen.png)"
+    "![title](images/screen.png)"
    ]
   },
   {
