--- a/RealTimeFlightTrackingBokeh.ipynb
+++ b/RealTimeFlightTrackingBokeh.ipynb
@@ -704,6 +704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Visualisation interactive with folium"
    ]
   },
   {
@@ -750,9 +751,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/withfolium.png)
-    Here you can see it in action [https://nbviewer.jupyter.org/github/Rhizome23/aircraft-project/blob/master/RealTimeFlightTrackingBokeh.ipynb]
-    (https://nbviewer.jupyter.org/github/Rhizome23/aircraft-project/blob/master/RealTimeFlightTrackingBokeh.ipynb)
+    "![title](images/withfolium.png) Here you can see it in action https://nbviewer.jupyter.org/github/Rhizome23/aircraft-project/blob/master/RealTimeFlightTrackingBokeh.ipynb
     "
    ]
   },
