--- a/RealTimeFlightTrackingBokeh.ipynb
+++ b/RealTimeFlightTrackingBokeh.ipynb
@@ -751,8 +751,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/withfolium.png) Here you can see it in action https://nbviewer.jupyter.org/github/Rhizome23/aircraft-project/blob/master/RealTimeFlightTrackingBokeh.ipynb
-    "
+    "![title](images/withfolium.png)"
    ]
   },
   {
