--- a/RealTimeFlightTrackingBokeh.ipynb
+++ b/RealTimeFlightTrackingBokeh.ipynb
@@ -744,7 +744,10 @@
     }
    ],
    "source": [
-    "m"
+    "m",
+    "\n",
+    "Ou ici de façon interactive",
+    "![lien](https://nbviewer.jupyter.org/github/Rhizome23/aircraft-project/blob/master/RealTimeFlightTrackingBokeh.ipynb)",
    ]
   },
   {
