--- a/RealTimeFlightTrackingBokeh.ipynb
+++ b/RealTimeFlightTrackingBokeh.ipynb
@@ -755,6 +755,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://nbviewer.jupyter.org/github/Rhizome23/aircraft-project/blob/master/RealTimeFlightTrackingBokeh.ipynb/\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![title](images/withfolium.png)"
    ]
   },
