--- a/RealTimeFlightTrackingBokeh.ipynb
+++ b/RealTimeFlightTrackingBokeh.ipynb
@@ -743,18 +743,13 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "m",
-    "\n",
-    "Ou ici de façon interactive",
-     "\n",
-    "https://nbviewer.jupyter.org/github/Rhizome23/aircraft-project/blob/master/RealTimeFlightTrackingBokeh.ipynb/\n"
-   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+     "Ci dessous en image statique ou via le lien suivant visible de façon interactive",
+     "\n",
     "https://nbviewer.jupyter.org/github/Rhizome23/aircraft-project/blob/master/RealTimeFlightTrackingBokeh.ipynb/\n"
    ]
   },
